@@ -1,12 +1,11 @@
 package com.ledger.task;
 
+import cn.hutool.core.util.RandomUtil;
 import com.alibaba.fastjson.JSONArray;
 import com.alibaba.fastjson.JSONObject;
 import com.ledger.entity.res.FetchMessage;
 import com.ledger.entity.res.intserfaces.SendMessage;
-import com.ledger.entity.resp.NewsTopResponse;
-import com.ledger.entity.resp.NowWeatherResponse;
-import com.ledger.entity.resp.VbHotWordsResponse;
+import com.ledger.entity.resp.*;
 import com.ledger.entity.resp.common.ResDataArr;
 import com.ledger.entity.resp.common.ResMessage;
 import com.ledger.enums.TypeEnum;
@@ -15,15 +14,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 @Component
 @Slf4j
 public class GetMessageUtil {
+
 
     @Scheduled(fixedRate = 3000)
     public static void getMessage() {
@@ -57,8 +55,9 @@ public class GetMessageUtil {
      * @param text 接受的消息文本
      */
     private static void switchTextMessage(String text) {
-        if (text.startsWith("/w ")) {
-            String city = text.replace("/w ", "");
+        // 新闻
+        if (text.startsWith("w ")) {
+            String city = text.replace("w ", "");
             //现在的天气
             try {
                 NowWeatherResponse nowWeatherResponse =
@@ -70,20 +69,30 @@ public class GetMessageUtil {
                 log.error(e.getMessage());
                 SendMessageUtil.SendMessages("输入的城市有误或者接口失效", true);
             }
-        } else if (text.startsWith("/n")) {
+        } else if (text.startsWith("n1")) {
             // TODO 两个新闻
             try {
                 NewsTopResponse newsTopResponse = ResUtils.getDataForCommon
                         ("http://v.juhe.cn/toutiao/index?type=top&key=d268884b9b07c0eb9d6093dc54116018", NewsTopResponse.class);
-                List<SendMessage.MessageChain> newsTopContent = getNewsContent(newsTopResponse);
+                List<SendMessage.MessageChain> newsTopContent = getNewsTopContent(newsTopResponse);
                 SendMessageUtil.SendMessages(newsTopContent, true);
             } catch (Exception e) {
                 log.error(e.getMessage());
                 SendMessageUtil.SendMessages("接口失效或者出现其他异常", true);
             }
-        } else if (text.startsWith("/vb ")) {
+        } else if (text.startsWith("n2")) {
+            try {
+                NewsNetResponse newsNetResponse = ResUtils.getDataForCommon
+                        ("https://v2.alapi.cn/api/new/toutiao?token=LwExDtUWhF3rH5ib", NewsNetResponse.class);
+                List<SendMessage.MessageChain> newsNetContent = getNewsNetContent(newsNetResponse);
+                SendMessageUtil.SendMessages(newsNetContent, true);
+            } catch (Exception e) {
+                log.error(e.getMessage());
+                SendMessageUtil.SendMessages("接口失效或者出现其他异常", true);
+            }
+        } else if (text.startsWith("vb ")) {
             // TODO 一个微博热搜
-            String count = text.replaceAll("/vb ", "");
+            String count = text.replaceAll("vb ", "");
             try {
                 VbHotWordsResponse vbHotWordsResponse = ResUtils.getDataForCommon
                         ("https://v2.alapi.cn/api/new/wbtop?token=LwExDtUWhF3rH5ib&num=" + count, VbHotWordsResponse.class);
@@ -94,8 +103,50 @@ public class GetMessageUtil {
                 log.error(e.getMessage());
                 SendMessageUtil.SendMessages("接口失效或者出现其他异常", true);
             }
+        } else if (text.startsWith("em ")) {
+            try {
+                EmojiResponse emojiResponse = ResUtils.getDataForCommon("https://test.harumoe.cn/api/emoji/all", EmojiResponse.class);
+                List<SendMessage.MessageChain> emojiContent = getEmojiContent(emojiResponse);
+                SendMessageUtil.SendMessages(emojiContent, true);
+            } catch (Exception e) {
+                log.error(e.getMessage());
+                SendMessageUtil.SendMessages("接口失效或者出现其他异常", true);
+            }
         }
     }
+
+    private static List<SendMessage.MessageChain> getNewsNetContent(NewsNetResponse newsNetResponse) {
+        List<NewsNetResponse.NewsItem> data = newsNetResponse.getData();
+        ArrayList<SendMessage.MessageChain> messageChains = new ArrayList<>();
+        data.forEach(i -> {
+            String title = i.getTitle();
+            String imgsrc = i.getImgsrc();
+            String source = i.getSource();
+            String time = i.getTime();
+            SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), title + "\n");
+            SendMessage.MessageChain messageChain1 = new SendMessage.MessageChain(TypeEnum.IMAGE.getType(), imgsrc + "\n");
+            SendMessage.MessageChain messageChain2 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), "新闻来源:" + source + "\n");
+            SendMessage.MessageChain messageChain4 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), "发布时间:" + time + "\n");
+            SendMessage.MessageChain messageChain5 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), "\n");
+            Collections.addAll(messageChains, messageChain, messageChain1, messageChain2, messageChain4, messageChain5, messageChain5);
+        });
+        return messageChains;
+    }
+
+    private static List<SendMessage.MessageChain> getEmojiContent(EmojiResponse emojiResponse) {
+        Map<String, String> data = emojiResponse.getData();
+        //获取一个0-9的随机数
+        int i = RandomUtil.randomInt(3, data.keySet().size());
+        ArrayList<String> urls = new ArrayList<>();
+        data.forEach((k, v) -> {
+            urls.add(v);
+        });
+        ArrayList<SendMessage.MessageChain> messageChains = new ArrayList<>();
+        SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.IMAGE.getType(), urls.get(i));
+        messageChains.add(messageChain);
+        return messageChains;
+    }
+
     //TODO 链接显示问题
     private static List<SendMessage.MessageChain> getVbHotWordsContent(VbHotWordsResponse vbHotWordsResponse) {
         List<VbHotWordsResponse.HotWord> data = vbHotWordsResponse.getData();
@@ -107,13 +158,9 @@ public class GetMessageUtil {
             String encodedText = null;
             String[] split = url.split("q=");
             String s = split[1];
-            try {
-                encodedText = URLEncoder.encode(s, "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                throw new RuntimeException(e);
-            }
-            SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), hot_word + "\n", true);
-            SendMessage.MessageChain messageChain1 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), split[0] + "q=" + encodedText + "\n", true);
+            encodedText = URLEncoder.encode(s, StandardCharsets.UTF_8);
+            SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), hot_word + "\n");
+            SendMessage.MessageChain messageChain1 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), split[0] + "q=" + encodedText + "\n");
             messageChains.add(messageChain);
             messageChains.add(messageChain1);
         });
@@ -121,7 +168,7 @@ public class GetMessageUtil {
         return messageChains;
     }
 
-    private static List<SendMessage.MessageChain> getNewsContent(NewsTopResponse newsTopResponse) {
+    private static List<SendMessage.MessageChain> getNewsTopContent(NewsTopResponse newsTopResponse) {
         List<NewsTopResponse.NewsItem> data = newsTopResponse.getResult().getData();
         List<NewsTopResponse.NewsItem> newsItems = data.subList(0, 10);
         ArrayList<SendMessage.MessageChain> messageChains = new ArrayList<>();
@@ -130,11 +177,11 @@ public class GetMessageUtil {
             String url = i.getUrl();
             String date = i.getDate();
             String thumbnailPicS = i.getThumbnail_pic_s();
-            SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), title + "\n", true);
-            SendMessage.MessageChain messageChain1 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), "新闻链接:\n", true);
-            SendMessage.MessageChain messageChain2 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), url, true);
-            SendMessage.MessageChain messageChain3 = new SendMessage.MessageChain(TypeEnum.IMAGE.getType(), thumbnailPicS, false);
-            SendMessage.MessageChain messageChain4 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), date + "\n", true);
+            SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), title + "\n");
+            SendMessage.MessageChain messageChain1 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), "新闻链接:\n");
+            SendMessage.MessageChain messageChain2 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), url);
+            SendMessage.MessageChain messageChain3 = new SendMessage.MessageChain(TypeEnum.IMAGE.getType(), thumbnailPicS);
+            SendMessage.MessageChain messageChain4 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), date + "\n");
             Collections.addAll(messageChains, messageChain, messageChain1, messageChain2, messageChain3, messageChain4);
             messageChains.add(messageChain);
         });
@@ -151,16 +198,38 @@ public class GetMessageUtil {
         list.add("城市:" + name + "\n");
         list.add("天气:" + weather + "\n");
         list.add("温度:" + temperature + "°C\n");
-        list.add("上次更新时间:" + lastUpdate + "\n");
+        //2023-09-08T22:54:21+08:00
+        String[] ts = lastUpdate.split("T");
+        String[] split = ts[1].split("\\+");
+        String time = ts[0] + "  " + split[1];
+        list.add("上次更新时间:" + "\n");
+        list.add(" " + time + "\n");
         ArrayList<SendMessage.MessageChain> messageChains = new ArrayList<>();
-        SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), list.get(0), true);
-        SendMessage.MessageChain messageChain1 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), list.get(1), true);
-        SendMessage.MessageChain messageChain2 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), list.get(2), true);
-        SendMessage.MessageChain messageChain3 = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), list.get(3), true);
-        Collections.addAll(messageChains, messageChain, messageChain1, messageChain2, messageChain3);
+        list.forEach(i -> {
+            SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.PLAIN.getType(), i);
+            messageChains.add(messageChain);
+        });
+        addFace(messageChains, true, 4);
         return messageChains;
     }
 
+    private static List<SendMessage.MessageChain> getRandomFace(boolean must, int maxFaceCount) {
+        ArrayList<SendMessage.MessageChain> messageChains = new ArrayList<>();
+        boolean haveFace = RandomUtil.randomBoolean();
+        int facId = RandomUtil.randomInt(320);
+        int faceCount = RandomUtil.randomInt(1, maxFaceCount);
+        if (must || haveFace) {
+            for (int i = 0; i < faceCount; i++) {
+                SendMessage.MessageChain messageChain = new SendMessage.MessageChain(TypeEnum.FACE.getType(), String.valueOf(facId));
+                messageChains.add(messageChain);
+            }
+        }
+        return messageChains;
+    }
+
+    private static void addFace(List<SendMessage.MessageChain> messageChains, boolean must, int maxFaceCount) {
+        messageChains.addAll(getRandomFace(must, maxFaceCount));
+    }
 
     private static void switchItem(JSONObject jsonObject) {
         String type = (String) jsonObject.get("type");
